fix the accent color in dark mode

--- a/_sass/dark-skin.scss
+++ b/_sass/dark-skin.scss
@@ -32,7 +32,7 @@ $system-gray6:   $ios-dark-mode-gray6;
 
 $base-color: #fff !default;
 $text-color: #fff !default;
-$accent-color: $system-gray !default;
+$accent-color: $system-gray6 !default;
 $nav-color: #000 !default;
 $background-color: #000 !default;
 $nav-background-color: $system-blue !default;
